--- a/model.yaml
+++ b/model.yaml
@@ -432,7 +432,13 @@ custom_data_model:
       type: number
       x-ngsi:
         type: Property
-
+    volatileOrganicCompoundsTotal:
+      description: 'Alkanes <C10, ketones <C6, aldehydes <C10, carboxylic acids <C5, aspirits<C7, Alkenes <C8, Aromatics'
+      minimum: 0
+      type: number
+      x-ngsi:
+        type: Property
+        
     powerFactor:
       description: Power factor for each phase
       properties:
